Fix mobile footer overlap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
 
 main {
     min-height: 100vh;
+    /* padding-bottom: 10rem; */
 }
 
 /********* Header ***********/
@@ -72,6 +73,11 @@ main {
 }
 
 /********* weather details section *************/
+.weather-details-section {
+    position: relative;
+    z-index: 1;
+}
+
 .details-card {
     background-color: #323544;
     min-height: 35rem;
@@ -95,12 +101,13 @@ main {
 
 .cards-container {
     top: calc(50% - 20rem);
-    width: 100%;
 }
 
 /*********** footer *************/
 footer {
     background-color: #262936;
+    position: relative;
+    z-index: 0;
 }
 
 .social-links a {
@@ -121,4 +128,11 @@ footer {
 .social-links a:hover {
     background-color: var(--primary-color);
     color: white;
+}
+
+/* media queries */
+@media (max-width: 768px) {
+    .weather-details-section {
+        min-height: 95rem;
+    }
 }
